--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,14 @@ end_of_line = lf
 indent_size = 4
 indent_style = space
 insert_final_newline = true
+
+[*.html]
+indent_size = 2
+
+[*.go]
+indent_size = 8
+indent_style = tab
+
+[Makefile]
+indent_size = 4
+indent_style = tab
