--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,7 @@
     "printWidth": 80,
     "tabWidth": 4,
     "useTabs": false,
-    "singleQuote": false,
+    "singleQuote": true,
     "trailingCommaPHP": true,
     "braceStyle": "psr-2",
     "requirePragma": false,
