--- a/configuration/.prettierrc.json
+++ b/configuration/.prettierrc.json
@@ -1,11 +1,11 @@
 {
-    "phpVersion": "7.4",
+    "phpVersion": "8.0",
     "printWidth": 80,
     "tabWidth": 4,
     "useTabs": false,
     "singleQuote": true,
     "trailingCommaPHP": true,
-    "braceStyle": "psr-2",
+    "braceStyle": "per-cs",
     "requirePragma": false,
     "insertPragma": false
 }
